--- a/ansible/exercise/playbooks/inventory.ini
+++ b/ansible/exercise/playbooks/inventory.ini
@@ -2,4 +2,4 @@
 server_1 ansible_host=ec2-3-137-213-60.us-east-2.compute.amazonaws.com ansible_user=ubuntu
 
 [webservers:vars]
-ansible_ssh_private_key_file=./../../../keys/id_rsa
+ansible_ssh_private_key_file=./id_rsa
