--- a/ansible/exercise/inventory/inventory.ini
+++ b/ansible/exercise/inventory/inventory.ini
@@ -1,3 +1,4 @@
+;More info: https://docs.ansible.com/ansible/latest/inventory_guide/intro_inventory.html
 [all]
 server_1 ansible_host=192.168.1.10 ansible_user=ubuntu
 server_2 ansible_host=192.168.1.11 ansible_user=ubuntu
