--- a/ansible/exercise/playbooks/ansible.cfg
+++ b/ansible/exercise/playbooks/ansible.cfg
@@ -4,6 +4,7 @@
 ; ANSIBLE_CONFIG (an environment variable)
 ; ~/.ansible.cfg (in the home directory)
 ; /etc/ansible/ansible.cfg
+; More: https://docs.ansible.com/ansible/latest/reference_appendices/config.html
 [defaults]
 inventory=inventory.ini
 deprecation_warnings=False
