--- a/ansible/exercise/exercises-roles/roles/docker/tasks/directory.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/directory.yaml
@@ -5,6 +5,11 @@
     path: "{{ app_path }}"
     state: directory
 
+- name: Prepare nginx conf directory
+  file:
+    path: "{{ nginx_conf_path }}"
+    state: directory
+
 - name: Copy docker compose file
   copy:
     src: ./../files/app/docker-compose.yaml
