--- a/ansible/exercise/exercises-roles/roles/docker/tasks/docker.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/docker.yaml
@@ -9,9 +9,7 @@
       - docker-ce-cli={{ docker_version }}
       - docker-compose
     state: present
+  notify: 
+    - start docker
 
 - include_tasks: user.yaml
-  notify:
-    - refresh group
-    - restart docker
-    - test docker
