--- a/ansible/exercise/exercises-roles/roles/docker/handlers/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/handlers/main.yaml
@@ -14,3 +14,6 @@
 
 - name: restart nginx service
   service: name=nginx state=restarted
+
+- name: start docker
+  service: name=docker state=started
