--- a/ansible/exercise/exercises-roles/roles/docker/tasks/debian.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/debian.yaml
@@ -14,5 +14,5 @@
 
 - name: Add Docker's official apt repository
   ansible.builtin.apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
     state: present
