--- a/ansible/exercise/playbooks/inventory.ini
+++ b/ansible/exercise/playbooks/inventory.ini
@@ -1,5 +1,5 @@
 [webservers]
-server_1 ansible_host=ec2-3-137-213-60.us-east-2.compute.amazonaws.com ansible_user=ubuntu
+server_1 ansible_host=192.168.1.1 ansible_user=ubuntu
 
 [ubuntu]
 server_1
