--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -1,8 +1,21 @@
+[all_hosts:children]
+webservers
+ubuntu
+swarm_manager
+swarm_worker
+
 [webservers]
 server_1 ansible_host=192.168.1.1 ansible_user=ubuntu
 
 [ubuntu]
 server_1
+
+[swarm_manager]
+server_1
+
+# set workers if your cluster is multi node
+[swarm_worker]
+# server_1
 
 [webservers:vars]
 ansible_ssh_private_key_file=./id_rsa
