add gcp example

--- a/ansible/example/gcp/ansible.cfg
+++ b/ansible/example/gcp/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory=inventory.yaml
+inventory=inventory.ini
 deprecation_warnings=False
 private_key_file="./../../../keys/id_rsa"
 remote_user="ubuntu"
+interpreter_python=/Users/glend/.pyenv/shims/python
