--- a/ansible/example/gcp/4-nat.yaml
+++ b/ansible/example/gcp/4-nat.yaml
@@ -22,7 +22,17 @@
         service_account_file: "{{ service_account_file }}"
         state: present
       register: address
-
+      tags:
+        - nat-address
+    - name: Delete static IP address
+      google.cloud.gcp_compute_address:
+        name: "{{ address_name }}"
+        region: "{{ region }}"
+        project: "{{ project }}"
+        state: absent
+      tags:
+        - never
+        - delete
     - name: Create a NAT gateway
       google.cloud.gcp_compute_router_nat:
         name: "{{ nat_name }}"
@@ -39,3 +49,14 @@
         service_account_file: "{{ service_account_file }}"
         state: present
       register: nat
+      tags:
+        - nat
+    - name: Delete NAT gateway 
+      google.cloud.gcp_compute_router_nat:
+        name: "{{ nat_name }}"
+        router: "{{ router_name }}"
+        region: "{{ region }}"
+        project: "{{ project }}"
+      tags:
+        - never
+        - delete
