--- a/ansible/example/gcp/6-firewall.yaml
+++ b/ansible/example/gcp/6-firewall.yaml
@@ -1,35 +1,24 @@
 # https://docs.ansible.com/ansible/latest/collections/google/cloud/gcp_compute_firewall_module.html
-# ansible-playbook 5-firewall.yaml
+# ansible-playbook 6-firewall.yaml
 ---
 - name: Create Firewall Rule
   hosts: localhost
   gather_facts: no
   tasks:
+    # https://docs.ansible.com/ansible/latest/collections/google/cloud/gcp_compute_firewall_module.html
     - name: Create a firewall rule
       google.cloud.gcp_compute_firewall:
         name: "allow-ssh"
         network: 
           selfLink: https://www.googleapis.com/compute/v1/projects/{{ project }}/global/networks/{{ network_name }}
         allowed:
-          - IPProtocol: tcp
+          - ip_protocol: tcp
             ports: ['22']
         source_ranges: ["0.0.0.0/0"]
         project: "{{ project }}"
         auth_kind: "{{ auth_kind }}"
         service_account_file: "{{ service_account_file }}"
-        state: present
+        state: "{{ 'absent' if delete else 'present' }}"
       register: firewall
       tags:
         - firewall
-    - name: Delete Firewall Rule
-      google.cloud.gcp_compute_firewall:
-        name: "allow-ssh"
-        network: 
-          selfLink: https://www.googleapis.com/compute/v1/projects/{{ project }}/global/networks/{{ network_name }}
-        project: "{{ project }}"
-        auth_kind: "{{ auth_kind }}"
-        service_account_file: "{{ service_account_file }}"
-        state: absent
-      tags:
-        - never
-        - delete
