--- a/ansible/example/gcp/7-kubernetes.yaml
+++ b/ansible/example/gcp/7-kubernetes.yaml
@@ -1,5 +1,5 @@
 # https://docs.ansible.com/ansible/latest/collections/google/cloud/gcp_container_cluster_module.html
-# ansible-playbook 6-kubernetes.yaml
+# ansible-playbook 7-kubernetes.yaml
 ---
 - name: Create Kubernetes Cluster
   hosts: localhost
@@ -9,8 +9,7 @@
       google.cloud.gcp_container_cluster:
         name: "{{ cluster_name }}"
         location: "{{ location }}"
-        network: 
-          selfLink: https://www.googleapis.com/compute/v1/projects/{{ project }}/global/networks/{{ network_name }}
+        network: "{{ network_name }}"
         subnetwork: "{{ subnetwork_name }}"
         initial_node_count: 1
         logging_service: "none"
@@ -32,18 +31,7 @@
         project: "{{ project }}"
         auth_kind: "{{ auth_kind }}"
         service_account_file: "{{ service_account_file }}"
-        state: present
+        state: "{{ 'absent' if delete else 'present' }}"
       register: cluster
       tags:
         - kubernetes
-    - name: Delete cluster
-      google.cloud.gcp_container_cluster:
-        name: "{{ cluster_name }}"
-        location: "{{ location }}"
-        project: "{{ project }}"
-        auth_kind: "{{ auth_kind }}"
-        service_account_file: "{{ service_account_file }}"
-        state: absent
-      tags:
-        - never
-        - delete
