--- a/ansible/example/gcp/8-nodepool.yaml
+++ b/ansible/example/gcp/8-nodepool.yaml
@@ -1,5 +1,6 @@
 # https://docs.ansible.com/ansible/latest/collections/google/cloud/gcp_container_node_pool_module.html
-# ansible-playbook 7-nodepool.yaml
+# ansible-playbook 8-nodepool.yaml
+# for delete: ansible-playbook 7-nodepool.yaml -e "delete=true"
 ---
 - name: Create Node Pool
   hosts: localhost
@@ -9,7 +10,9 @@
       google.cloud.gcp_container_node_pool:
         name: "{{ node_pool_name }}"
         location: "{{ location }}"
-        cluster: "{{ cluster_name }}"
+        cluster:
+          name: "{{ cluster_name }}"
+          project: "{{ project }}"
         initial_node_count: 1
         config:
           machine_type: "e2-micro"
@@ -25,19 +28,7 @@
         project: "{{ project }}"
         auth_kind: "{{ auth_kind }}"
         service_account_file: "{{ service_account_file }}"
-        state: present
+        state: "{{ 'absent' if delete else 'present' }}"
       register: node_pool
       tags:
         - nodepool
-    - name: Delete node pool 
-      google.cloud.gcp_container_node_pool:
-        name: "{{ node_pool_name }}"
-        location: "{{ location }}"
-        cluster: "{{ cluster_name }}"
-        project: "{{ project }}"
-        auth_kind: "{{ auth_kind }}"
-        service_account_file: "{{ service_account_file }}"
-        state: absent
-      tags:
-        - never
-        - delete
