--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -5,7 +5,7 @@ swarm_manager
 swarm_worker
 
 [webservers]
-server_1 ansible_host=192.168.1.1 ansible_user=ubuntu
+server_1 ansible_host=192.168.0.0.1 ansible_user=ubuntu
 
 [ubuntu]
 server_1
@@ -18,4 +18,4 @@ server_1
 # server_1
 
 [webservers:vars]
-ansible_ssh_private_key_file=./id_rsa
+ansible_ssh_private_key_file=./../../../keys/id_rsa
