--- a/ansible/exercise/exercises-roles/roles/docker/tasks/certbot.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/certbot.yaml
@@ -5,4 +5,5 @@
     state: present
 - name: Generate Let's Encrypt certificate
   command: certbot --nginx -d {{ public_url }} --email {{ author_email }} --agree-tos --no-eff-email
-  notify: restart nginx service
+- name: restart nginx service
+  service: name=nginx state=restarted
