--- a/ansible/exercise/exercises-roles/roles/docker/tasks/nginx.yaml
+++ b/ansible/exercise/exercises-roles/roles/docker/tasks/nginx.yaml
@@ -18,5 +18,6 @@
   template:
     src: ./../files/nginx/default.conf.j2
     dest: /etc/nginx/conf.d/default.conf
-  notify:
-  - restart nginx service
+
+- name: restart nginx service
+  service: name=nginx state=restarted
