fix create image from packer

--- a/ansible/example/docker/playbook.yaml
+++ b/ansible/example/docker/playbook.yaml
@@ -23,8 +23,8 @@
       apt:
         update_cache: yes
         name: 
-          - docker-ce={{ docker_version }}
-          - docker-ce-cli={{ docker_version }}
+          - docker-ce
+          - docker-ce-cli
           - docker-compose
         state: present
 
