--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -17,5 +17,21 @@ server_1
 [swarm_worker]
 # server_1
 
+[nomad:children]
+nomad_server
+nomad_client
+
+[nomad_server]
+nomad_server_1 ansible_host=34.101.171.130 ansible_user=glendmaatita_me
+
+[nomad_client]
+nomad_client_1 ansible_host=34.101.117.253 ansible_user=glendmaatita_me
+
+[nomad_lb]
+nomad_lb_1 ansible_host=34.101.194.241 ansible_user=glendmaatita_me
+
 [webservers:vars]
 ansible_ssh_private_key_file=./../../../keys/id_rsa
+
+[nomad:vars]
+ansible_ssh_private_key_file=id_rsa
