--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -21,17 +21,30 @@ server_1
 nomad_server
 nomad_client
 
+[consul:children]
+consul_server
+consul_client
+
 [nomad_server]
-nomad_server_1 ansible_host=34.101.171.130 ansible_user=glendmaatita_me
+nomad_server_1 ansible_host=192.168.0.0.2 ansible_user=ubuntu
 
 [nomad_client]
-nomad_client_1 ansible_host=34.101.117.253 ansible_user=glendmaatita_me
+nomad_client_1 ansible_host=192.168.0.0.3 ansible_user=ubuntu
+
+[consul_server]
+consul_server_1 ansible_host=192.168.0.0.2 ansible_user=ubuntu
+
+[consul_client]
+consul_client_1 ansible_host=192.168.0.0.3 ansible_user=ubuntu
 
 [nomad_lb]
-nomad_lb_1 ansible_host=34.101.194.241 ansible_user=glendmaatita_me
+nomad_lb_1 ansible_host=192.168.0.0.4 ansible_user=ubuntu
 
 [webservers:vars]
 ansible_ssh_private_key_file=./../../../keys/id_rsa
 
 [nomad:vars]
-ansible_ssh_private_key_file=id_rsa
+ansible_ssh_private_key_file=./../../../keys/id_rsa
+
+[consul:vars]
+ansible_ssh_private_key_file=./../../../keys/id_rsa
