--- a/ansible/exercise/exercises-roles/roles/nomad/vars/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/nomad/vars/main.yaml
@@ -4,3 +4,7 @@ docker_version: 5:26.1.0-1~ubuntu.22.04~jammy
 docker_group: docker
 docker_users:
   - ubuntu
+
+nomad_servers: ["192.168.0.0.1"]
+consul_address: 192.168.0.0.3:8500
+consul_ui_url: "https://consul.bootcamp.onxp.net:8501/ui"
