--- a/ansible/exercise/exercises-roles/inventory.ini
+++ b/ansible/exercise/exercises-roles/inventory.ini
@@ -26,25 +26,25 @@ consul_server
 consul_client
 
 [nomad_server]
-nomad_server_1 ansible_host=192.168.0.0.2 ansible_user=ubuntu
+nomad_server_1 ansible_host=34.101.171.130 ansible_user=glendmaatita_me
 
 [nomad_client]
-nomad_client_1 ansible_host=192.168.0.0.3 ansible_user=ubuntu
+nomad_client_1 ansible_host=34.101.117.253 ansible_user=glendmaatita_me
 
 [consul_server]
-consul_server_1 ansible_host=192.168.0.0.2 ansible_user=ubuntu
+consul_server_1 ansible_host=34.101.171.130 ansible_user=glendmaatita_me
 
 [consul_client]
-consul_client_1 ansible_host=192.168.0.0.3 ansible_user=ubuntu
+consul_client_1 ansible_host=34.101.117.253 ansible_user=glendmaatita_me
 
 [nomad_lb]
-nomad_lb_1 ansible_host=192.168.0.0.4 ansible_user=ubuntu
+nomad_lb_1 ansible_host=34.101.194.241 ansible_user=glendmaatita_me
 
 [webservers:vars]
 ansible_ssh_private_key_file=./../../../keys/id_rsa
 
 [nomad:vars]
-ansible_ssh_private_key_file=./../../../keys/id_rsa
+ansible_ssh_private_key_file=id_rsa
 
 [consul:vars]
-ansible_ssh_private_key_file=./../../../keys/id_rsa
+ansible_ssh_private_key_file=id_rsa
