--- a/ansible/exercise/exercises-roles/roles/nomad/vars/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/nomad/vars/main.yaml
@@ -6,5 +6,8 @@ docker_users:
   - ubuntu
 
 nomad_servers: ["192.168.0.0.1"]
-consul_address: 192.168.0.0.3:8500
+
+# https://developer.hashicorp.com/nomad/docs/configuration/consul
+# configure nomad agent to talk with consul in the same host
+consul_address: 127.0.0.1:8500
 consul_ui_url: "https://consul.bootcamp.onxp.net:8501/ui"
