--- a/ansible/exercise/exercises-roles/roles/nomad/tasks/configure.yaml
+++ b/ansible/exercise/exercises-roles/roles/nomad/tasks/configure.yaml
@@ -31,7 +31,7 @@
     mode: '0700'
 
 - name: Set datacenter
-  copy:
+  template:
     src: ./files/nomad.hcl.j2
     dest: /etc/nomad.d/nomad.hcl
 
