--- a/ansible/exercise/exercises-roles/roles/nomad/vars/main.yaml
+++ b/ansible/exercise/exercises-roles/roles/nomad/vars/main.yaml
@@ -6,7 +6,7 @@ docker_users:
   - ubuntu
 
 nomad_servers: ["192.168.0.1"]
-nomad_domain: "192.168.0.1"
+nomad_domain: "example.com"
 
 # https://developer.hashicorp.com/nomad/docs/configuration/consul
 # configure nomad agent to talk with consul in the same host
